--- a/src/styles/PlaySongs.scss
+++ b/src/styles/PlaySongs.scss
@@ -1,22 +1,44 @@
 .PlaySongs {
-  // width: 50%;
+  width: 60%;
   margin: 30px auto;
   position: relative;
+  padding: 20px;
 }
 
 .PlaySongs__item {
-  display: flex;
-  box-shadow: 0 0 12px rgb(230, 223, 223);
-  gap: 10px;
-  margin-bottom: 30px;
-  align-items: center;
-  padding-left: 10px;
-  cursor: pointer;
-  color: white;
+  &--sub {
+    box-shadow: 0 0 5px rgb(241, 238, 238);
+    cursor: pointer;
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(2, auto);
+    margin: 20px auto;
+    width: 80%;
+    justify-content: space-between;
+    padding-right: 20px;
+    transition: background-color 3s;
+
+    &:hover {
+      background-color: hsl(245, 90%, 81%);
+    }
+
+    div {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-left: 20px;
+
+      & .button-heart {
+        transition: transform 2s;
+        &:hover {
+          transform: scale(1.3);
+        }
+      }
+    }
+  }
 }
 
 .PlaySongs__item--footer {
-  border: 2px solid red;
   position: fixed;
   bottom: 0;
   display: flex;
