add responsive in the components

--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -47,7 +47,7 @@ header {
 
   &__body {
     background-color: white;
-    box-shadow: 0 0 10px rgb(206, 195, 195);
+    box-shadow: 0 0 10px #f1eeee;
     border-radius: 10px;
     width: 300px;
     margin: auto;
@@ -73,7 +73,7 @@ header {
       font-weight: bold;
       border-radius: 10px;
       color: black;
-      box-shadow: 0 0 10px rgb(182, 177, 177);
+      box-shadow: 0 0 10px #8d8989;
     }
 
     & .button-sing {
