--- a/src/styles/PlaySongs.scss
+++ b/src/styles/PlaySongs.scss
@@ -9,7 +9,7 @@
   width: 90%;
 
   &--sub {
-    box-shadow: 0 0 5px rgb(241, 238, 238);
+    box-shadow: 0 0 5px #f1eeee;
     cursor: pointer;
     display: grid;
     align-items: center;
@@ -77,7 +77,7 @@
   &--controlls {
     width: 410px;
     text-align: center;
-    background-color: rgb(141, 137, 137);
+    background-color: #8d8989;
     border-radius: 20px;
     cursor: pointer;
 
@@ -108,7 +108,7 @@
       }
     }
     &-div {
-      background-color: rgb(141, 137, 137);
+      background-color: #8d8989;
       width: 100px;
       border-radius: 10px;
       cursor: pointer;
