add responsive in the components

--- a/src/styles/PlaySongs.scss
+++ b/src/styles/PlaySongs.scss
@@ -20,7 +20,7 @@
     transition: background-color 2s;
 
     &:hover {
-      background-color: hsl(245, 84%, 75%);
+      background-color: #938af5;
     }
 
     div {
