--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 
 header {
-  background-color: hsl(245, 75%, 52%);
+  background-color: #3829e0;
   padding: 5px;
   display: flex;
   justify-content: space-around;
