--- a/src/styles/containers/Login.scss
+++ b/src/styles/containers/Login.scss
@@ -1,7 +1,6 @@
 .Login {
   width: 100%;
   background-image: url("/images/pattern-background-desktop.svg/");
-  // height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -29,7 +28,7 @@
     width: 430px;
     border-radius: 15px;
     font-family: "Atkinson Hyperlegible", sans-serif;
-    box-shadow: 0 0 18px rgb(224, 217, 217);
+    box-shadow: 0 0 18px #e0d9d9;
     background-color: white;
 
     & img {
@@ -57,7 +56,7 @@
     }
 
     & button {
-      background-color: hsl(245, 75%, 52%);
+      background-color: #3829e0;
       color: white;
       width: 80%;
       padding: 13px;
@@ -67,7 +66,7 @@
 
       &:hover {
         transition: background-color 2s;
-        background-color: hsl(245, 86%, 66%);
+        background-color: #6a5ef3;
       }
     }
   }
