--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -35,7 +35,7 @@ header {
 }
 
 .Modal {
-  // background-color: rgb(0, 0, 0, 0.5);
+  background-color: #00000080;
   position: absolute;
   top: 0;
   left: 0;
